Assets/TencentIMSDK/Native/NativeSDK.cs


    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMRemoveRecvNewMsgCallback(TIMRecvNewMsgCallback cb);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMsgReactionsChangedCallback(TIMMsgReactionsChangedCallback cb,IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMsgAllMessageReceiveOptionCallback(TIMMsgAllMessageReceiveOptionCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMsgExtensionsChangedCallback(TIMMsgExtensionsChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMsgExtensionsDeletedCallback(TIMMsgExtensionsDeletedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMsgReadedReceiptCallback(TIMMsgReadedReceiptCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMsgRevokeCallback(TIMMsgRevokeCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMsgElemUploadProgressCallback(TIMMsgElemUploadProgressCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetGroupTipsEventCallback(TIMGroupTipsEventCallback cb, IntPtr user_data);
    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetGroupAttributeChangedCallback(TIMGroupAttributeChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetGroupCounterChangedCallback(TIMGroupCounterChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetConvEventCallback(TIMConvEventCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetConvConversationGroupCreatedCallback(TIMConvConversationGroupCreatedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetConvConversationGroupDeletedCallback(TIMConvConversationGroupDeletedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetConvConversationGroupNameChangedCallback(TIMConvConversationGroupNameChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetConvConversationsAddedToGroupCallback(TIMConvConversationsAddedToGroupCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetConvConversationsDeletedFromGroupCallback(TIMConvConversationsDeletedFromGroupCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetConvTotalUnreadMessageCountChangedCallback(TIMConvTotalUnreadMessageCountChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetConvUnreadMessageCountChangedByFilterCallback(TIMConvTotalUnreadMessageCountChangedByFilterCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetNetworkStatusListenerCallback(TIMNetworkStatusListenerCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetKickedOfflineCallback(TIMKickedOfflineCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetUserSigExpiredCallback(TIMUserSigExpiredCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetOnAddFriendCallback(TIMOnAddFriendCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetOnDeleteFriendCallback(TIMOnDeleteFriendCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetUpdateFriendProfileCallback(TIMUpdateFriendProfileCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetFriendAddRequestCallback(TIMFriendAddRequestCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetFriendApplicationListDeletedCallback(TIMFriendApplicationListDeletedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetFriendApplicationListReadCallback(TIMFriendApplicationListReadCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetFriendBlackListAddedCallback(TIMFriendBlackListAddedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetFriendBlackListDeletedCallback(TIMFriendBlackListDeletedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetLogCallback(TIMLogCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMsgUpdateCallback(TIMMsgUpdateCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMsgGroupPinnedMessageChangedCallback(TIMMsgGroupPinnedMessageChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSetGroupTopicCreatedCallback(TIMGroupTopicCreatedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSetGroupTopicDeletedCallback(TIMGroupTopicDeletedCallback cb, IntPtr user_data);
    
    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSetGroupTopicChangedCallback(TIMGroupTopicChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSetSelfInfoUpdatedCallback(TIMSelfInfoUpdatedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSetUserStatusChangedCallback(TIMUserStatusChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSetUserInfoChangedCallback(TIMUserInfoChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetFriendGroupCreatedCallback(TIMFriendGroupCreatedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetFriendGroupDeletedCallback(TIMFriendGroupDeletedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetFriendGroupNameChangedCallback(TIMFriendGroupNameChangedCallback cb, IntPtr user_data);
  
    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetFriendsAddedToGroupCallback(TIMFriendsAddedToGroupCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetFriendsDeletedFromGroupCallback(TIMFriendsDeletedFromGroupCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMyFollowingListChangedCallback(TIMMyFollowingListChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMyFollowersListChangedCallback(TIMMyFollowersListChangedCallback cb, IntPtr user_data);
  
    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetMutualFollowersListChangedCallback(TIMMutualFollowersListChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetOfficialAccountSubscribedCallback(TIMOfficialAccountSubscribedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetOfficialAccountUnsubscribedCallback(TIMOfficialAccountUnsubscribedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetOfficialAccountDeletedCallback(TIMOfficialAccountDeletedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetOfficialAccountInfoChangedCallback(TIMOfficialAccountInfoChangedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetSignalingReceiveNewInvitationCallback(TIMSignalingReceiveNewInvitationCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetSignalingInviteeAcceptedCallback(TIMSignalingInviteeAcceptedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetSignalingInviteeRejectedCallback(TIMSignalingInviteeRejectedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetSignalingInvitationCancelledCallback(TIMSignalingInvitationCancelledCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetSignalingInvitationTimeoutCallback(TIMSignalingInvitationTimeoutCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetSignalingInvitationModifiedCallback(TIMSignalingInvitationModifiedCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityCreateTopicCallback(TIMCommunityCreateTopicCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityDeleteTopicCallback(TIMCommunityDeleteTopicCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityChangeTopicInfoCallback(TIMCommunityChangeTopicInfoCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void TIMSetCommunityReceiveTopicRESTCustomDataCallback(TIMCommunityReceiveTopicRESTCustomDataCallback cb, IntPtr user_data);
